--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -165,11 +165,11 @@ body,html{
     top: 17.5%;
     left: 50%;
     transform: translate(-49%);
-    /* border-radius: 50%; */
+     
     /* background: yellow; */
     overflow: hidden;
-    /* animation:touxiang 3.8s; */
-    /*animation-delay:19.5s;*/
+    /* animation:touxiang 3.8s; 
+    animation-delay:19.5s; */
 }
 
 .touxiangimg{
@@ -562,17 +562,15 @@ body,html{
         <div class="box3beijingbox xiaobox">
             <image class="box3beijing" src="{$gif_url}" id="gif_url" />
         </div>
+
         <!-- 头像 -->
-
-
         <div class="touxiangbox xiaobox" id="touxiangbox" style="display: none;">
-            <image class="touxiang" src="{$info.photo_url}" />
+            <image class="touxiang" src="{$info.photo_url}" style="{$touxiang}" />
             <div class="touxiang">
-                <image class="touxiangimg" src="{$info.photo_url}" />
+                <image class="touxiangimg" src="{$info.photo_url}"  style="{$touxiang}" />
             </div>
         </div>
 
-        
         <!-- 文字四 -->
         <div class="wenzisibox xiaobox">
             <image class="wenzisi" src="/image/wenzisi.png" />
@@ -617,7 +615,7 @@ body,html{
     setTimeout(function () {
         // $('#gif_url').hide();
 
-        $("#gif_url").attr('src','{$picture}'); 
+        $("#gif_url").attr('src','{$tail_img}'); 
 
         console.log('关掉')
         $("#touxiangbox").show();
@@ -627,8 +625,6 @@ body,html{
         $(".wenzispan").addClass("heise");
         $(".bos3_a").show();
       
-        
-        
     }, duration * 1000);
 
 </script>
