--- a/application/admin/view/box_cate/index.html
+++ b/application/admin/view/box_cate/index.html
@@ -23,6 +23,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>类别名称</th>
+                                <th>封面图</th>
                                 <th>状态</th>
                                 <th>添加时间</th>
                                 <th>排序</th>
@@ -34,6 +35,7 @@
                             <tr>
                                 <td>{$vo.id}</td>
                                 <td>{$vo.name}</td>
+                                <td><img src="{$vo.picture}" width="50px;" /></td>
                                 <td>{if condition="$vo.status eq 1"}启用{else/}禁用{/if}</td>
                                 <td>{$vo.addtime|date='Y-m-d',###}</td>
                                 <td>{$vo.sort}</td>
@@ -47,6 +49,7 @@
                                 <tr>
                                     <td>{$v.id}</td>
                                     <td>------ {$v.name}</td>
+                                    <td><img src="{$vo.picture}" width="50px;" /></td>
                                     <td>{if condition="$v.status eq 1"}启用{else/}禁用{/if}</td>
                                     <td>{$v.addtime|date='Y-m-d',###}</td>
                                     <td>{$v.sort}</td>
