--- a/application/admin/view/box_cate/index.html
+++ b/application/admin/view/box_cate/index.html
@@ -35,7 +35,7 @@
                             <tr>
                                 <td>{$vo.id}</td>
                                 <td>{$vo.name}</td>
-                                <td><img src="{$vo.picture}" width="50px;" /></td>
+                                <td><img src="{$vo.picture}" width="40px;" /></td>
                                 <td>{if condition="$vo.status eq 1"}启用{else/}禁用{/if}</td>
                                 <td>{$vo.addtime|date='Y-m-d',###}</td>
                                 <td>{$vo.sort}</td>
@@ -49,7 +49,7 @@
                                 <tr>
                                     <td>{$v.id}</td>
                                     <td>------ {$v.name}</td>
-                                    <td><img src="{$vo.picture}" width="50px;" /></td>
+                                    <td><img src="{$v.picture}" width="40px;" /></td>
                                     <td>{if condition="$v.status eq 1"}启用{else/}禁用{/if}</td>
                                     <td>{$v.addtime|date='Y-m-d',###}</td>
                                     <td>{$v.sort}</td>
