--- a/application/admin/view/box_cate/index.html
+++ b/application/admin/view/box_cate/index.html
@@ -27,18 +27,20 @@
                                 <th>状态</th>
                                 <th>添加时间</th>
                                 <th>排序</th>
+                                <th>图片类型</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
                             <tbody>
                             {volist name="list" id="vo"}
                             <tr>
-                                <td>{$vo.id}</td>
+                                <td></td>
                                 <td>{$vo.name}</td>
-                                <td><img src="{$vo.picture}" width="40px;" /></td>
+                                <td></td>
                                 <td>{if condition="$vo.status eq 1"}启用{else/}禁用{/if}</td>
                                 <td>{$vo.addtime|date='Y-m-d',###}</td>
                                 <td>{$vo.sort}</td>
+                                <td></td>
                                 <td>
                                     <a class="btn btn-default delete" href="{:url('edit',['id'=>$vo.id],false)}" >编辑 </i></a>
                                     <a class="btn btn-default delete" href="{:url('add',['pid'=>$vo.id],false)}" >添加子分类</i></a>
@@ -50,9 +52,10 @@
                                     <td>{$v.id}</td>
                                     <td>------ {$v.name}</td>
                                     <td><img src="{$v.picture}" width="40px;" /></td>
-                                    <td>{if condition="$v.status eq 1"}启用{else/}禁用{/if}</td>
+                                    <td>{if condition="$v.status eq 1"}<span style="color:green;">启用</span>{else/}<span style="color:red">禁用</span>{/if}</td>
                                     <td>{$v.addtime|date='Y-m-d',###}</td>
                                     <td>{$v.sort}</td>
+                                    <td>{if condition="$v.user_img_type eq 1"}方形{else/}圆形{/if}</td>
                                     <td>
                                         <a class="btn btn-default delete" href="{:url('edit',['id'=>$v.id],false)}" >编辑 </i></a>
                                         <a class="btn btn-default delete" onclick="del(this,{$v.id})" href="javascript:;" >删除 </i></a>
