--- a/application/admin/view/sharing/index.html
+++ b/application/admin/view/sharing/index.html
@@ -1,7 +1,11 @@
 {extend name="common:base" /}
 
 {block name="content"}
-
+<style>
+    th span{margin-left: 20px;cursor:pointer;}
+    .red{color: red;}
+    .sort{    height: 24px; line-height: 24px; width: 50px; border: #FC6 solid 1px;}
+</style>
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
@@ -42,13 +46,13 @@
                         <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th>ID</th>
+                                <th>ID</th> 
                                 <th>标题</th>
                                 <th>发布人</th>
                                 <th>类别</th>
+                                <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th>
                                 <!-- <th>状态</th> -->
                                 <th>点赞数</th>
-                                <th>排序</th>
                                 <th>是否推荐</th>
                                 <th>是否首页推荐</th>
                                 <th>发布时间</th>
@@ -62,9 +66,9 @@
                                 <td>{$vo.title}</td>
                                 <td>{$vo.nickname}</td>
                                 <td>{if condition="$vo.type"}视频{else/}图文{/if}</td>
+                                <td><input type="text" name="1" data-id="{$vo.id}" value="{$vo.sort}" class="sort" onchange="goods_sort(this)"></td>
                                 <!-- <td>{$vo.status_name}</td> -->
                                 <td>{$vo.point_num}</td>
-                                <td>{$vo.sort}</td>
                                 <td align="left" axis="col0">
                                     <div style="text-align: left; width: 30px;">
                                         {if condition='$vo.is_rec eq 1'}
@@ -207,6 +211,32 @@
             },'json');
         }
     }
+
+    function goods_sort(obj){
+        var sort = $(obj).val();
+        var id = $(obj).attr('data-id');
+        $.post('{:url('sharing/edit_sort')}',{'sort':sort,'id':id},function(res){
+            if(res.status != 1){
+                layer.msg(res.msg);
+            }else{
+                layer.msg('修改成功',{'icon':1})
+            }
+        },'json')
+    }
+
+    //排序
+    function order(obj){
+        order = $(obj).attr('data-id');
+        location.href="{:url('index')}?order="+order;
+    }
+
+    $('th span').each(function(k,v){
+        var tmp_order = '{$order}';
+        if(tmp_order == $(v).attr('data-id')){
+            $(v).addClass('red');
+        }
+    })
+    
 
 </script>
 {/block}
