修改商品上传图片提示

--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -452,10 +452,10 @@ function getSyfm(){
     var id = $('select[name="goods_attr1"]').val();
     if(id == 1){
         $('.syfm').css('display','block');
-        $('.jianyi').html('建议上传74x142的图片');
+        // $('.jianyi').html('建议上传74x142的图片');
     }else if(id== 2 || id==4 || id==6){
         $('.syfm').css('display','block');
-        $('.jianyi').html('建议上传320x170的图片');
+        // $('.jianyi').html('建议上传320x170的图片');
     }else{
         $('.syfm').css('display','none');
         $('.jianyi').html('');
