--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -441,10 +441,10 @@ function getSyfm(){
     var id = $('select[name="goods_attr1"]').val();
     if(id == 1){
         $('.syfm').css('display','block');
-        $('.jianyi').html('建议上传74x142的图片');
+        // $('.jianyi').html('建议上传74x142的图片');
     }else if(id== 2 || id==4 || id==6){
         $('.syfm').css('display','block');
-        $('.jianyi').html('建议上传320x170的图片');
+        // $('.jianyi').html('建议上传320x170的图片');
     }else{
         $('.syfm').css('display','none');
         $('.jianyi').html('');
@@ -547,8 +547,8 @@ $('#goods_table thead tr').on('mouseout', 'th', function(){
         var imgurl = '';
         var imgcount = 0;
         $('#upload_image').localResizeIMG({
-            width: 360,
-            quality: 0.8,
+            width: 800,
+            quality: 1,
             success: function (result) {
             	console.log(result)
                 var status = true;
