--- a/application/admin/view/sharing/index.html
+++ b/application/admin/view/sharing/index.html
@@ -47,15 +47,15 @@
                             <thead>
                             <tr>
                                 <th>ID</th> 
-                                <th>标题</th>
-                                <th>发布人</th>
-                                <th>类别</th>
+                                <th>标题<span data-id="title" onclick="order(this)">↑↑</span><span data-id="title desc" onclick="order(this)">↓↓</span></th>
+                                <th>发布人<span data-id="user_id" onclick="order(this)">↑↑</span><span data-id="user_id desc" onclick="order(this)">↓↓</span></th>
+                                <th>类别<span data-id="type" onclick="order(this)">↑↑</span><span data-id="type desc" onclick="order(this)">↓↓</span></th>
                                 <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th>
                                 <!-- <th>状态</th> -->
-                                <th>点赞数</th>
-                                <th>是否推荐</th>
-                                <th>是否首页推荐</th>
-                                <th>发布时间</th>
+                                <th>点赞数<span data-id="point_num" onclick="order(this)">↑↑</span><span data-id="point_num desc" onclick="order(this)">↓↓</span></th>
+                                <th>是否推荐<span data-id="is_rec" onclick="order(this)">↑↑</span><span data-id="is_rec desc" onclick="order(this)">↓↓</span></th>
+                                <th>是否首页推荐<span data-id="is_home" onclick="order(this)">↑↑</span><span data-id="is_home desc" onclick="order(this)">↓↓</span></th>
+                                <th>发布时间<span data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
                                 <th>操作</th>
                             </tr>
                             </thead>
