--- a/application/admin/view/goods/goods_brand.html
+++ b/application/admin/view/goods/goods_brand.html
@@ -2,9 +2,52 @@
 
 {block name="content"}
 <style>
-    th span{margin-left: 20px;cursor:pointer;}
-    .red{color: red;}
-    .sort{    height: 24px; line-height: 24px; width: 50px; border: #FC6 solid 1px;}
+  th span{
+    /* margin-left: 20px; */
+    cursor:pointer;
+  }
+  /* .red{
+    color: red;
+  } */
+  .sort{    height: 24px; line-height: 24px; width: 50px; border: #FC6 solid 1px;}
+  .triangle-box{
+    position: relative;
+    top: 3px;
+    margin-left: 5px;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+  }
+  .triangle-s{
+    position: absolute;
+    top:-10px;
+    width: 0;
+    height: 0;
+    border-width: 8px;
+    border-style: solid;
+    border-color:  transparent transparent #e7eaec transparent ;
+  }
+  .triangle-s:hover{
+    border-color:  transparent transparent #000 transparent ;
+  }
+  .Highlight-s{
+    border-color:  transparent transparent #000 transparent!important;
+  }
+  .Highlight-x{
+    border-color: #000 transparent transparent transparent!important;
+  }
+  .triangle-x{
+    position: absolute;
+    bottom:-10px;
+    width: 0;
+    height: 0;
+    border-width: 8px;
+    border-style: solid;
+    border-color:  #e7eaec transparent transparent transparent;
+  }
+  .triangle-x:hover{
+    border-color: #000 transparent transparent transparent;
+  }
 </style>
     <div class="row">
         <div class="col-lg-12">
@@ -17,7 +60,7 @@
                 </div>
                 <div class="ibox-content">
                     <div class="row" style="margin-left:0px;" >
-                        <a class="btn btn-default delete" href="{:url('add_goods_brand')}" >添加品牌 </i></a>
+                        <a class="btn btn-default delete" href="{:url('add_goods_brand')}" >添加品牌</a>
                         <!-- <a class="btn btn-default delete" onclick="del_all(0)" href="javascript:;" >批量删除 <i class="fa fa-trash-o"></i></a> -->
                     </div>
 
@@ -27,11 +70,11 @@
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>名称<span data-id="name" onclick="order(this)">↑↑</span><span data-id="name desc" onclick="order(this)">↓↓</span></th>
+                                <th>名称<span class="triangle-box"><span class="triangle-s" data-id="name" onclick="order(this)"></span><span class="triangle-x" data-id="name desc" onclick="order(this)"></span></span></th>
                                 <th>图片</th>
-                                <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th>
-                                <th>状态<span data-id="status desc" onclick="order(this)">↑↑</span><span data-id="status" onclick="order(this)">↓↓</span></th>
-                                <th>添加时间<span  data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
+                                <th>排序<span class="triangle-box"><span class="triangle-s" data-id="sort" onclick="order(this)"></span><span class="triangle-x" data-id="sort desc" onclick="order(this)"></span></span></th>
+                                <th>状态<span class="triangle-box"><span class="triangle-s" data-id="status desc" onclick="order(this)"></span><span class="triangle-x" data-id="status" onclick="order(this)"></span></span></th>
+                                <th>添加时间<span class="triangle-box"><span class="triangle-s" data-id="addtime" onclick="order(this)"></span><span class="triangle-x" data-id="addtime desc" onclick="order(this)"></span></span></th>
                                 <th>操作</th>
                             </tr>
                             </thead>
@@ -71,7 +114,7 @@
                 if(data.status){
                     $(obj).parents('tr').remove();
                 }
-            },'json'); 
+            },'json');
         }
     }
 
@@ -84,7 +127,13 @@
     $('th span').each(function(k,v){
         var tmp_order = '{$order}';
         if(tmp_order == $(v).attr('data-id')){
-            $(v).addClass('red');
+          if($(v).attr('class') == 'triangle-x'){
+              $(v).addClass('Highlight-x');
+          }
+          if($(v).attr('class') == 'triangle-s'){
+              $(v).addClass('Highlight-s');
+          }
+            // $(v).addClass('red');
         }
     })
 
