--- a/application/admin/view/sharing/index.html
+++ b/application/admin/view/sharing/index.html
@@ -2,9 +2,52 @@
 
 {block name="content"}
 <style>
-    th span{margin-left: 20px;cursor:pointer;}
-    .red{color: red;}
+    th span{
+      /* margin-left: 20px; */
+      cursor:pointer;
+    }
+    /* .red{
+      color: red;
+    } */
     .sort{    height: 24px; line-height: 24px; width: 50px; border: #FC6 solid 1px;}
+    .triangle-box{
+      position: relative;
+      top: 3px;
+      margin-left: 5px;
+      width: 16px;
+      height: 16px;
+      display: inline-block;
+    }
+    .triangle-s{
+      position: absolute;
+      top:-10px;
+      width: 0;
+      height: 0;
+      border-width: 8px;
+      border-style: solid;
+      border-color:  transparent transparent #e7eaec transparent ;
+    }
+    .triangle-s:hover{
+      border-color:  transparent transparent #000 transparent ;
+    }
+    .Highlight-s{
+      border-color:  transparent transparent #000 transparent!important;
+    }
+    .Highlight-x{
+      border-color: #000 transparent transparent transparent!important;
+    }
+    .triangle-x{
+      position: absolute;
+      bottom:-10px;
+      width: 0;
+      height: 0;
+      border-width: 8px;
+      border-style: solid;
+      border-color:  #e7eaec transparent transparent transparent;
+    }
+    .triangle-x:hover{
+      border-color: #000 transparent transparent transparent;
+    }
 </style>
     <div class="row">
         <div class="col-lg-12">
@@ -26,15 +69,15 @@
                                     <option value="2" {if condition="$status_ed eq '2'"}selected{/if}>未通过</option>
                                 </select>
                             </div> -->
-                            
+
                             <div class="col-sm-2">
                                 <div class="input-group"><input type="text" name="keyword" value="{$keyword}" placeholder="搜索标题名称" class="input-sm form-control"> </div>
                             </div>
-    
+
                             <div class="col-sm-3">
-                                <div class="input-group"> 
+                                <div class="input-group">
                                     <span class="input-group-btn">
-                                        <button type="submit" class="btn btn-sm btn-primary"> 搜索</button> 
+                                        <button type="submit" class="btn btn-sm btn-primary"> 搜索</button>
                                     </span>
                                 </div>
                             </div>
@@ -46,20 +89,31 @@
                         <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th>ID</th> 
-                                <th>标题<span data-id="title" onclick="order(this)">↑↑</span><span data-id="title desc" onclick="order(this)">↓↓</span></th>
-                                <th>发布人<span data-id="user_id" onclick="order(this)">↑↑</span><span data-id="user_id desc" onclick="order(this)">↓↓</span></th>
-                                <th>类别<span data-id="type" onclick="order(this)">↑↑</span><span data-id="type desc" onclick="order(this)">↓↓</span></th>
-                                <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th>
+                              <!-- <th>ID</th>
+                              <th>标题<span data-id="title" onclick="order(this)">↑↑</span><span class="triangle" data-id="title desc" onclick="order(this)">↓↓</span></th>
+                              <th>发布人<span data-id="user_id" onclick="order(this)">↑↑</span><span data-id="user_id desc" onclick="order(this)">↓↓</span></th>
+                              <th>类别<span data-id="type" onclick="order(this)">↑↑</span><span data-id="type desc" onclick="order(this)">↓↓</span></th>
+                              <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th> -->
+                              <!-- <th>状态</th> -->
+                              <!-- <th>点赞数<span data-id="point_num" onclick="order(this)">↑↑</span><span data-id="point_num desc" onclick="order(this)">↓↓</span></th>
+                              <th>是否推荐<span data-id="is_rec" onclick="order(this)">↑↑</span><span data-id="is_rec desc" onclick="order(this)">↓↓</span></th>
+                              <th>是否首页推荐<span data-id="is_home" onclick="order(this)">↑↑</span><span data-id="is_home desc" onclick="order(this)">↓↓</span></th>
+                              <th>发布时间<span data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
+                              <th>操作</th> -->
+                                <th>ID</th>
+                                <th>标题<span class="triangle-box"><span class="triangle-s" data-id="title" onclick="order(this)"></span><span class="triangle-x" data-id="title desc" onclick="order(this)"></span></span></th>
+                                <th>发布人<span class="triangle-box"><span class="triangle-s" data-id="user_id" onclick="order(this)"></span><span class="triangle-x" data-id="user_id desc" onclick="order(this)"></span></span</th>
+                                <th>类别<span class="triangle-box"><span class="triangle-s" data-id="type" onclick="order(this)"></span><span class="triangle-x" data-id="type desc" onclick="order(this)"></span></span</th>
+                                <th>排序<span class="triangle-box"><span class="triangle-s" data-id="sort" onclick="order(this)"></span><span class="triangle-x" data-id="sort desc" onclick="order(this)"></span></span</th>
                                 <!-- <th>状态</th> -->
-                                <th>点赞数<span data-id="point_num" onclick="order(this)">↑↑</span><span data-id="point_num desc" onclick="order(this)">↓↓</span></th>
-                                <th>是否推荐<span data-id="is_rec" onclick="order(this)">↑↑</span><span data-id="is_rec desc" onclick="order(this)">↓↓</span></th>
-                                <th>是否首页推荐<span data-id="is_home" onclick="order(this)">↑↑</span><span data-id="is_home desc" onclick="order(this)">↓↓</span></th>
-                                <th>发布时间<span data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
+                                <th>点赞数<span class="triangle-box"><span class="triangle-s" data-id="point_num" onclick="order(this)"></span><span class="triangle-x" data-id="point_num desc" onclick="order(this)"></span></span</th>
+                                <th>是否推荐<span class="triangle-box"><span class="triangle-s" data-id="is_rec" onclick="order(this)"></span><span class="triangle-x" data-id="is_rec desc" onclick="order(this)"></span></span</th>
+                                <th>是否首页推荐<span class="triangle-box"><span class="triangle-s" data-id="is_home" onclick="order(this)"></span><span class="triangle-x" data-id="is_home desc" onclick="order(this)"></span></span</th>
+                                <th>发布时间<span class="triangle-box"><span class="triangle-s" data-id="addtime" onclick="order(this)"></span><span class="triangle-x" data-id="addtime desc" onclick="order(this)"></span></span</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
-                            <tbody> 
+                            <tbody>
                             {volist name="list" id="vo"}
                             <tr>
                                 <td>{$vo.id}</td>
@@ -102,7 +156,7 @@
                         </table>
                         </form>
                     </div>
-                    
+
                     <ul class="pagination">
                         {$list->render()}
                     </ul>
@@ -170,8 +224,8 @@
                 alert('请勾选需要批量下架的ID！');
             }
         }
-        goods_id = goods_id.substring(0, goods_id.length - 1);  
-        
+        goods_id = goods_id.substring(0, goods_id.length - 1);
+
         $.post("{:url('Goods/is_show_all')}",{'goods_id':goods_id,'is_show':is_show},function(data){
             if(data.code){
                 if( is_show ){
@@ -233,10 +287,16 @@
     $('th span').each(function(k,v){
         var tmp_order = '{$order}';
         if(tmp_order == $(v).attr('data-id')){
-            $(v).addClass('red');
+            if($(v).attr('class') == 'triangle-x'){
+                $(v).addClass('Highlight-x');
+            }
+            if($(v).attr('class') == 'triangle-s'){
+                $(v).addClass('Highlight-s');
+            }
+            // $(v).addClass('red');
         }
     })
-    
+
 
 </script>
 {/block}
