--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -453,7 +453,7 @@ function getSyfm(){
     if(id == 1){
         $('.syfm').css('display','block');
         // $('.jianyi').html('建议上传74x142的图片');
-    }else if(id== 2 || id==4 || id==6){
+    }else if(id== 2 || id==4 || id==5 || id==6){
         $('.syfm').css('display','block');
         // $('.jianyi').html('建议上传320x170的图片');
     }else{
