--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -48,6 +48,7 @@
   .triangle-x:hover{
     border-color: #000 transparent transparent transparent;
   }
+  .select.input-sm{height: 32px;}
 </style>
     <div class="row">
         <div class="col-lg-12">
