修改input框大小

--- a/static/inspinia/css/style.css
+++ b/static/inspinia/css/style.css
@@ -36,6 +36,10 @@ h5 {
   margin-top: 5px;
   font-weight: 600;
 }
+input[type=checkbox]{
+  width: 18px;
+  height: 18px;
+}
 .nav > li > a {
   color: #a7b1c2;
   font-weight: 600;
