--- a/application/admin/view/advertisement/edit.html
+++ b/application/admin/view/advertisement/edit.html
@@ -21,7 +21,7 @@
                     <p style="color:red">* 0 - 10 , 客户端显示从小到大。</p>
                 </div>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="col-sm-2 control-label">链接</label>
                 <div class="col-sm-9">
                     <input type="text" name="url" value="{$info.url|default=''}" class="form-control">
@@ -34,7 +34,7 @@
                     <input name="type" type="radio" value="0" {if !isset($info['type']) || $info['type'] == 0}checked="checked"{/if}/><label>轮播</label>
                     <input name="type" type="radio"  value='1' {if isset($info['type']) && $info['type'] == 1}checked="checked"{/if}/><label>广告</label>
                 </div>
-            </div>
+            </div> -->
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">图片</label>
