--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -86,6 +86,8 @@
                         <input type="hidden" name="less_stock_type" value="2">
                         <!-- 商品封面图 -->
                         <input type="hidden" name="picture" value="">
+                        <!-- 商品视频 -->
+                        <input type="hidden" name="video" value="">
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品名称</label>
@@ -194,6 +196,20 @@
                                     <div class="upload_btn">
                                         <input type="file" id="upload_image" value="图片上传" accept="image/jpeg,image/gif,image/png" capture="camera">
                                     </div>
+                                </dd>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">视频上传</label>
+                            <div class="col-sm-9">
+                                <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                    <ul id="imglist3" class="post_imglist_syfm"  style="float: left;">
+                                        <video src="" controls="controls" id="video2t" style="max-width:300px !important;max-height:150px important;">
+                                    </ul>
+                                    <label for="upload_image3" style="float: left;"><div class="upload_btn" style="margin-top: 40px;margin-left: 20px;">
+                                    </div></label>
+                                    <div style=" margin-left: 10px;float: left;line-height: 60px;"><span class="jianyi" style="color: #5fb878;"></span></div>
                                 </dd>
                             </div>
                         </div>
@@ -362,6 +378,10 @@
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
                         <input type="file" id="upload_image2" value="图片上传" accept="image/jpeg,image/gif,image/png" onchange="upload_file2()" name="file" capture="camera" style="display: none;">
                     </form>
+                    <!-- 视频上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm2" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="upload_image3" value="视频上传"  onchange="upload_file3()" name="file" capture="camera" style="display: none;">
+                    </form>
                 </div>
             </div>
         </div>
@@ -405,6 +425,18 @@ function upload_file2(){
         if(data.status == 1){
             $('input[name="picture"]').val(data.data);
             $('.post_imglist_syfm').html('<li><img src="'+data.data+'" width="100" alt=""></li>');
+        }else{
+            alert(data.msg);
+        }
+    });
+}
+
+//视频上传
+function upload_file3(){
+    $("#ajaxForm2").ajaxSubmit(function (data) {
+        if(data.status == 1){
+            $('input[name="video"]').val(data.data);
+            $('#video2t').attr('src',data.data);
         }else{
             alert(data.msg);
         }
