默认头像不显示

--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -619,7 +619,7 @@ body,html{
 
         console.log('关掉')
         //默认的不显示
-        if("{$info.photo_url} != '/image/default.png' "){
+        if("{$info.photo_url} != 'https://www.9pointstars.com/image/default.png' "){
             $("#touxiangbox").show();
         }
 
