--- a/application/admin/view/box_cate/add.html
+++ b/application/admin/view/box_cate/add.html
@@ -107,6 +107,45 @@
                             </div>
                         </div>
                         <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要头像</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_photo" checked="true" id="show3" >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_photo" id="show4" >
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要音乐</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_music" checked="true" id="show3"  >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_music" id="show4">
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要祝福</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_content" checked="true" id="show3"  >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_content" id="show4">
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">用户的图</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
