--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -99,7 +99,7 @@
                             <label class="col-sm-2 control-label">是否加粗</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
-                                    <input type="radio" value="1" name="is_strong" checked="true" id="show3" {if condition="$info.is_strong eq 1"}checked="true"{/if} >
+                                    <input type="radio" value="1" name="is_strong" id="show3" {if condition="$info.is_strong eq 1"}checked="true"{/if} >
                                     <label for="show1">是</label>
                                 </div>
                                 <div class="radio radio-danger radio-inline">
@@ -109,10 +109,49 @@
                             </div>
                         </div>
                         <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要头像</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_photo" id="show3" {if condition="$info.is_photo eq 1"}checked="true"{/if} >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_photo" id="show4" {if condition="$info.is_photo eq 0"}checked="true"{/if} >
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要音乐</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_music" id="show3" {if condition="$info.is_music eq 1"}checked="true"{/if} >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_music" id="show4" {if condition="$info.is_music eq 0"}checked="true"{/if} >
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
+                            <label class="col-sm-2 control-label">是否要祝福</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="is_content" id="show3" {if condition="$info.is_content eq 1"}checked="true"{/if} >
+                                    <label for="show1">是</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="is_content" id="show4" {if condition="$info.is_content eq 0"}checked="true"{/if} >
+                                    <label for="show2">否</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">用户的图</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
-                                    <input type="radio" value="1" name="user_img_type" checked="true" id="show1"  {if condition="$info.user_img_type eq 1"}checked="true"{/if}>
+                                    <input type="radio" value="1" name="user_img_type" id="show1"  {if condition="$info.user_img_type eq 1"}checked="true"{/if}>
                                     <label for="show1">方的</label>
                                 </div>
                                 <div class="radio radio-danger radio-inline">
