--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -564,18 +564,22 @@ body,html{
         </div>
 
         <!-- 头像 -->
-        <div class="touxiangbox xiaobox" id="touxiangbox" style="display: none;">
-            <image class="touxiang" src="{$info.photo_url}" style="{$touxiang}" />
-            <div class="touxiang">
-                <image class="touxiangimg" src="{$info.photo_url}"  style="{$touxiang}" />
+        {if condition="$box_scene.is_is_photo"}
+            <div class="touxiangbox xiaobox" id="touxiangbox" style="display: none;">
+                <image class="touxiang" src="{$info.photo_url}" style="{$touxiang}" />
+                <div class="touxiang">
+                    <image class="touxiangimg" src="{$info.photo_url}"  style="{$touxiang}" />
+                </div>
             </div>
-        </div>
+        {/if}
 
         <!-- 文字四 -->
-        <div class="wenzisibox xiaobox">
-            <image class="wenzisi" src="/image/wenzisi.png" />
-            <span class="wenzispan" style="{$style}">{$info.content}</span>
-        </div> 
+        {if condition="$box_scene.is_content"}
+            <div class="wenzisibox xiaobox">
+                <image class="wenzisi" src="/image/wenzisi.png" />
+                <span class="wenzispan" style="{$style}">{$info.content}</span>
+            </div> 
+        {/if}
     </div>
 
     <a onclick="test()" class="bos3_a">{$text}></a>
@@ -591,7 +595,7 @@ body,html{
     {/if}
 
     <!-- 播放音乐 -->
-    {if condition="$info.music_url"}
+    {if condition="$info.music_url && $box_scene.is_music"}
     <div id="audio_btn" class="rotate">
         <audio loop src="{$info.music_url}" id="media" autoplay="autoplay" ></audio>
     </div>
