--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -564,7 +564,7 @@ body,html{
         </div>
 
         <!-- 头像 -->
-        {if condition="$box_scene.is_is_photo"}
+        {if condition="$box_scene.is_photo"}
             <div class="touxiangbox xiaobox" id="touxiangbox" style="display: none;">
                 <image class="touxiang" src="{$info.photo_url}" style="{$touxiang}" />
                 <div class="touxiang">
