--- a/application/admin/view/box_music/index.html
+++ b/application/admin/view/box_music/index.html
@@ -70,7 +70,7 @@
                                 <th>音乐名</th>
                                 <th>音乐人</th>
                                 <th>状态</th>
-                                <th>添加时间 </th>
+                                <th>添加时间<span class="triangle-box"><span class="triangle-s" data-id="addtime" onclick="order(this)"></span><span class="triangle-x" data-id="addtime desc" onclick="order(this)"></span></span></th>
                                 <th>操作</th>
                             </tr> 
                             </thead>
